# spoon

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: code-style.md  pitfalls.md  verification.md
.github/workflows/: ci.yml
docs/: architecture.md  design-overview.md  export-policy.md  host-actions.md  positioning.md  roadmap.md  usage.md  v1-usage.md  v2-architecture.md
docs/plans/: v2-orchestrator-plan.md
github/history-template/: README.md
github/history-template/.github/workflows/: validate-exports.yml
github/history-template/scripts/: validate_exports.py
scripts/: check_doc_links.py
skills/spoon/: SKILL.md
skills/spoon-orchestrator/: SKILL.md
skills/spoon-orchestrator/references/: action-kinds.md  decision-gates.md
skills/spoon/references/: action-kinds.md  decision-gates.md
src/spoon/: cli.py  config_ack.py  config_report.py  constants.py  export_policy.py  git_util.py  io_util.py  layout.py  locale_util.py  path_policy.py  paths.py  review_parser.py  sanitize.py  skills_install.py  spoon_config.py  task_label.py  templates.py
src/spoon/adapters/: __init__.py  base.py  claude_cli.py  claude_sessions.py  claude_visible_run.py  codex_app.py  codex_cli.py  command_util.py  manual.py  terminal_launch.py
src/spoon/commands/: __init__.py  action_cmd.py  adopt_plan_cmd.py  archive_cmd.py  board_cmd.py  config_cmd.py  export_cmd.py  handoff_cmd.py  init_cmd.py  prompts_cmd.py  run_cmd.py  skills_cmd.py  snapshot_cmd.py
src/spoon/runner/: __init__.py  actions.py  engine.py  events.py  gates.py  model.py  state_store.py
tests/: test_adopt_plan_cmd.py  test_archive_cmd.py  test_board_cmd.py  test_claude_cli_adapter.py  test_claude_sessions.py  test_cli.py  test_codex_app_adapter.py  test_codex_cli_adapter.py  test_config_ack.py  test_config_cmd.py  test_docs_contract.py  test_github_export.py  test_handoff_cmd.py  test_init_cmd.py  test_integration_flow.py  test_io_paths.py  test_layout.py  test_locale_util.py  test_manual_adapter.py  test_orchestrator_skill.py  test_path_policy.py  test_project_layout.py  test_prompts_cmd.py  test_run_action_cli.py  test_runner_actions.py  test_runner_engine.py  test_runner_events.py  test_runner_gates.py  test_runner_model.py  test_runner_state_store.py  test_sanitize.py  test_skills_cmd.py  test_snapshot_cmd.py  test_spoon_config.py  test_task_label.py  test_terminal_launch.py  test_v2_acceptance.py
