[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spoon"
version = "0.2.0"
description = "Local CLI workflow helper for coordinating Cursor, Codex, and Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Spoon contributors" }]
keywords = ["cli", "cursor", "codex", "claude-code", "workflow", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/charonwang/spoon"
Repository = "https://github.com/charonwang/spoon"
Issues = "https://github.com/charonwang/spoon/issues"

[project.scripts]
spoon = "spoon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spoon*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/spoon/templates.py" = ["E501"]
